--- a/ionic.project
+++ b/ionic.project
@@ -4,12 +4,11 @@
   "proxies": [
       {
         "path": "/api",
-        "proxyUrl": "http://192.168.31.195:8080"
+        "proxyUrl": "https://erp.arungas.com"
       },
       {
       "path": "/review",
-      "proxyUrl":"http://192.168.31.195:1337"
+      "proxyUrl":"http://approve.arungas.com/api"
       }
-
   ]
 }
